--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="left_side">
             <div class="profiletxt">
                 <div class="imgbx">
-                    <img src="818A6912(1).jpg" height="300px" width="300px">
+                    <img src="![818A6912(1)](https://user-images.githubusercontent.com/129189901/228553599-d753dbc1-804a-4879-a58d-29d4158ac1cc.jpg)" height="300px" width="300px">
             </div>
               <h2>Cadell, Deon Jeanne</h2>
             </div>
